--- a/customer-service.properties
+++ b/customer-service.properties
@@ -1,1 +1,9 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/customer?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=rootroot
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+​
+spring.batch.initialize-schema=never
 
+server.port=7005
+management.endpoints.web.exposure.include=*
