--- a/admin-api.properties
+++ b/admin-api.properties
@@ -1,1 +1,9 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_security?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=rootroot
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+​
+spring.batch.initialize-schema=never
 
+server.port=8282
+management.endpoints.web.exposure.include=*
